# rolling_hash

./: .gitignore  CMakeLists.txt  DeltaFile.cpp  DeltaFile.h  Doxyfile.in  HashService.h  README.md  Signature.h  SignatureFile.cpp  main.cpp  new_starwars_story.txt  starwars_a_new_hope.txt  starwars_a_new_hope_modified.txt
include/: BackupService.h  CompressionService.h  Delta.h  DeltaFile.h  Exceptions.h  FileService.h  SignatureFile.h
src/: DeltaFile.cpp
tests/: test0001.cpp  tests.h
